--- a/src/lib/styles/_reset.scss
+++ b/src/lib/styles/_reset.scss
@@ -7,4 +7,11 @@ body {
     font-family: $font-source;
     font-size: 16px;
     font-weight: 600;
+    min-width: 240px;
+}
+
+a {
+    text-decoration: none;
+    color: $white;
+    font-size: 18px;
 }
