Add form for `/picture/new` page

--- a/src/lib/styles/_variable.scss
+++ b/src/lib/styles/_variable.scss
@@ -4,4 +4,5 @@ $font-source: 'Source Sans Pro', sans-serif;
 $white: #ffffff;
 $black: #27323a;
 $gray: #435055;
-$pink: #ff5c8d;
+$pink: #ff6464;
+$green: #34be82;
