Add disabled button

--- a/src/lib/styles/_variable.scss
+++ b/src/lib/styles/_variable.scss
@@ -3,6 +3,7 @@ $font-source: 'Source Sans Pro', sans-serif;
 
 $white: #ffffff;
 $black: #27323a;
-$gray: #435055;
+$black2: #435055;
+$gray: #c6cacc;
 $pink: #ff6464;
 $green: #2eb086;
